# pico-lcd-audio

./: CMakeLists.txt  channel.c  channel.h  main.c  testwav.h  uploaduf2.bat
lib/Config/: DEV_Config.c
lib/dft/: dft.c  dft.h
lib/lcd1n14/: CMakeLists.txt  lcd1n14.c  lcd1n14.h
lib/mcp4922/: CMakeLists.txt  mcp4922.c  mcp4922.h
lib/wavaudio/: CMakeLists.txt  wavaudio.c  wavaudio.h
src/: channel.c  channel.h  main.c
src/wav/: wav_kick.h  wav_snare.h  wav_starwars.h
